--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
    
 }
 
+.addname{
+  font-size: 15px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
 .footer{
   font-size: 10px;
   font-family: 'Courier New', Courier, monospace;
