--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,12 @@
   text-align: center;
   font-size: 40px;
   font-family: 'Courier New', Courier, monospace;
-  
+}
+
+.setName{
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Courier New', Courier, monospace;
 
 }
 
